@@ -102,8 +102,10 @@ public class RealmMigrationTests extends AndroidTestCase {
             @Override
             public long execute(Realm realm, long version) {
                 Table table = realm.getTable(AnnotationTypes.class);
-                table.addColumn(ColumnType.INTEGER, "id");
+                long columnIndex = table.addColumn(ColumnType.INTEGER, "id");
                 table.setPrimaryKey("id");
+                // Primary key will be indexed automatically
+                table.addSearchIndex(columnIndex);
                 table.addColumn(ColumnType.STRING, "indexString");
                 table.addColumn(ColumnType.STRING, "notIndexString");
                 // Forget to set @Index
@@ -130,9 +132,10 @@ public class RealmMigrationTests extends AndroidTestCase {
             @Override
             public long execute(Realm realm, long version) {
                 Table table = realm.getTable(AnnotationTypes.class);
-                table.addColumn(ColumnType.INTEGER, "id");
+                long columnIndex = table.addColumn(ColumnType.INTEGER, "id");
+                table.addSearchIndex(columnIndex);
                 // Forget to set @PrimaryKey
-                long columnIndex = table.addColumn(ColumnType.STRING, "indexString");
+                columnIndex = table.addColumn(ColumnType.STRING, "indexString");
                 table.addSearchIndex(columnIndex);
                 table.addColumn(ColumnType.STRING, "notIndexString");
                 return 1;
@@ -158,9 +161,11 @@ public class RealmMigrationTests extends AndroidTestCase {
             @Override
             public long execute(Realm realm, long version) {
                 Table table = realm.getTable(AnnotationTypes.class);
-                table.addColumn(ColumnType.INTEGER, "id");
+                long columnIndex = table.addColumn(ColumnType.INTEGER, "id");
                 table.setPrimaryKey("id");
-                long columnIndex = table.addColumn(ColumnType.STRING, "indexString");
+                // Primary key will be indexed automatically
+                table.addSearchIndex(columnIndex);
+                columnIndex = table.addColumn(ColumnType.STRING, "indexString");
                 table.addSearchIndex(columnIndex);
                 table.addColumn(ColumnType.STRING, "notIndexString");
                 return 1;
@@ -180,6 +185,36 @@ public class RealmMigrationTests extends AndroidTestCase {
         assertEquals(3, table.getColumnCount());
         assertTrue(table.hasPrimaryKey());
         assertTrue(table.hasSearchIndex(table.getColumnIndex("indexString")));
+    }
+
+    public void testNotSettingIndexForPrimaryKeyThrows() {
+        RealmMigration migration = new RealmMigration() {
+            @Override
+            public long execute(Realm realm, long version) {
+                Table table = realm.getTable(AnnotationTypes.class);
+                table.addColumn(ColumnType.INTEGER, "id");
+                table.setPrimaryKey("id");
+                // Forget to add search index primary key
+                long columnIndex = table.addColumn(ColumnType.STRING, "indexString");
+                table.addSearchIndex(columnIndex);
+                table.addColumn(ColumnType.STRING, "notIndexString");
+                return 1;
+            }
+        };
+        RealmConfiguration realmConfig = new RealmConfiguration.Builder(getContext())
+                .schemaVersion(1)
+                .schema(AnnotationTypes.class)
+                .migration(migration)
+                .build();
+        Realm.deleteRealm(realmConfig);
+        Realm.migrateRealm(realmConfig);
+
+        try {
+            realm = Realm.getInstance(realmConfig);
+            fail();
+        } catch (RealmMigrationNeededException expected) {
+        }
+
     }
 
     public void testGetPathFromMigrationException() throws IOException {
