@@ -4,6 +4,7 @@
  * Closing realm on another thread different from where it was created now throws an exception.
  * Realm will now throw a RealmError when Realm's underlying storage engine encounters an unrecoverable error.
  * @Index annotation can also be applied to byte/short/int/long/boolean/Date now.
+ * Fields with annotation @PrimaryKey are indexed automatically now.
 
 0.81.1
  * Fixed memory leak causing Realm to never release Realm objects.
